[project]
name = "py-async-tt"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "YOSHITAKA matsumot", email = "yo4taka.ma2moto@gmail.com" }
]
dependencies = [
    "aioboto3>=13.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/py_async_tt"]
